/*
SPDX-FileCopyrightText: 2022-present Open Networking Foundation <info@opennetworking.org>

SPDX-License-Identifier: Apache-2.0
*/

syntax = "proto3";

package atomix.runtime.value.v1;

option java_package = "io.atomix.api.value.v1";
option java_outer_classname = "ValueV1";
option java_multiple_files = true;

import "runtime/v1/runtime.proto";
import "google/protobuf/duration.proto";
import "gogoproto/gogo.proto";

// Value is a service for a value primitive
service Value {
    // Create creates the value
    rpc Create (CreateRequest) returns (CreateResponse);

    // Close closes the value
    rpc Close (CloseRequest) returns (CloseResponse);

    // Set sets the value
    rpc Set (SetRequest) returns (SetResponse);

    // Insert inserts the value
    rpc Insert (InsertRequest) returns (InsertResponse);

    // Update updates the value
    rpc Update (UpdateRequest) returns (UpdateResponse);

    // Get gets the value
    rpc Get (GetRequest) returns (GetResponse);

    // Delete deletes the value
    rpc Delete (DeleteRequest) returns (DeleteResponse);

    // Watch watches the value
    rpc Watch (WatchRequest) returns (stream WatchResponse);

    // Events watches for value change events
    rpc Events (EventsRequest) returns (stream EventsResponse);
}

message ValueConfig {
    ValueCacheConfig cache = 1 [
        (gogoproto.nullable) = false
    ];
}

message ValueCacheConfig {
    bool enabled = 1;
}


message CreateRequest {
    atomix.runtime.v1.PrimitiveID id = 1 [
        (gogoproto.customname) = "ID",
        (gogoproto.nullable) = false
    ];
    repeated string tags = 2;
}

message CreateResponse {
    ValueConfig config = 1 [
        (gogoproto.nullable) = false
    ];
}

message CloseRequest {
    atomix.runtime.v1.PrimitiveID id = 1 [
        (gogoproto.customname) = "ID",
        (gogoproto.nullable) = false
    ];
}

message CloseResponse {

}

message GetRequest {
    atomix.runtime.v1.PrimitiveID id = 1 [
        (gogoproto.customname) = "ID",
        (gogoproto.nullable) = false
    ];
}

message GetResponse {
    VersionedValue value = 1;
}

message SetRequest {
    atomix.runtime.v1.PrimitiveID id = 1 [
        (gogoproto.customname) = "ID",
        (gogoproto.nullable) = false
    ];
    bytes value = 2;
    google.protobuf.Duration ttl = 3 [
        (gogoproto.customname) = "TTL",
        (gogoproto.stdduration) = true
    ];
}

message SetResponse {
    uint64 version = 1;
    VersionedValue prev_value = 2;
}

message InsertRequest {
    atomix.runtime.v1.PrimitiveID id = 1 [
        (gogoproto.customname) = "ID",
        (gogoproto.nullable) = false
    ];
    bytes value = 2;
    google.protobuf.Duration ttl = 3 [
        (gogoproto.customname) = "TTL",
        (gogoproto.stdduration) = true
    ];
}

message InsertResponse {
    uint64 version = 1;
}

message UpdateRequest {
    atomix.runtime.v1.PrimitiveID id = 1 [
        (gogoproto.customname) = "ID",
        (gogoproto.nullable) = false
    ];
    bytes value = 2;
    uint64 prev_version = 3;
    google.protobuf.Duration ttl = 4 [
        (gogoproto.customname) = "TTL",
        (gogoproto.stdduration) = true
    ];
}

message UpdateResponse {
    uint64 version = 1;
    VersionedValue prev_value = 2 [
        (gogoproto.nullable) = false
    ];
}

message DeleteRequest {
    atomix.runtime.v1.PrimitiveID id = 1 [
        (gogoproto.customname) = "ID",
        (gogoproto.nullable) = false
    ];
    uint64 prev_version = 2;
}

message DeleteResponse {
    VersionedValue value = 1;
}

message WatchRequest {
    atomix.runtime.v1.PrimitiveID id = 1 [
        (gogoproto.customname) = "ID",
        (gogoproto.nullable) = false
    ];
}

message WatchResponse {
    VersionedValue value = 1;
}

message EventsRequest {
    atomix.runtime.v1.PrimitiveID id = 1 [
        (gogoproto.customname) = "ID",
        (gogoproto.nullable) = false
    ];
}

message EventsResponse {
    Event event = 1 [
        (gogoproto.nullable) = false
    ];
}

message VersionedValue {
    bytes value = 1;
    uint64 version = 2;
}

message Event {
    oneof event {
        Created created = 1;
        Updated updated = 2;
        Deleted deleted = 3;
    }

    message Created {
        VersionedValue value = 1 [
            (gogoproto.nullable) = false
        ];
    }

    message Updated {
        VersionedValue value = 1 [
            (gogoproto.nullable) = false
        ];
        VersionedValue prev_value = 2 [
            (gogoproto.nullable) = false
        ];
    }

    message Deleted {
        VersionedValue value = 1 [
            (gogoproto.nullable) = false
        ];
        bool expired = 2;
    }
}
